# travel-client

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: app.py
src/: airbnb.py  apify.py  custom_weatherapi_mcp.py  extract_brave_results.py  flight_service.py  gmaps_service.py  main.py  routes.py  search.py  server.py  test_amadeus.py  test_apify.py  test_search_tools.py  test_weather_tools.py  weather.py
tests/: test_airbnb_tools.py  test_all_mcp_servers.py  test_api.py  test_brave_api.py  test_complete.py  test_custom_weatherapi_mcp.py  test_gmaps_service.py  test_weatherapi_mcp.py
